远程方法调用，简单dubbo

--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>parent</artifactId>
-        <groupId>com.raycloud.dmj</groupId>
-        <version>erp.0.5-SNAPSHOT</version>
-        <relativePath>../erp/pom.xml</relativePath>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.raycloud.dmj</groupId>
     <artifactId>MyTest</artifactId>
     <packaging>jar</packaging>
+    <version>1.0</version>
+    <name>MyTest</name>
     <!--<modules>-->
         <!--<module>../poet</module>-->
     <!--</modules>-->
@@ -35,6 +30,19 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
             <version>5.0.0.Alpha1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.24</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.esotericsoftware.kryo</groupId>
+            <artifactId>kryo</artifactId>
+            <version>2.16</version>
         </dependency>
 
         <dependency>
