--- a/testCode/pom.xml
+++ b/testCode/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <!--<parent>-->
         <!--<artifactId>MyTest</artifactId>-->
-        <!--<groupId>com.raycloud.dmj</groupId>-->
+        <!--<groupId>com.dmj</groupId>-->
         <!--<version>1.0</version>-->
     <!--</parent>-->
     <parent>
