购物篮分析等代码

--- a/spark-test/src/main/resources/log4j.properties
+++ b/spark-test/src/main/resources/log4j.properties
@@ -1,4 +1,7 @@
 log4j.rootLogger=DEBUG,debug,file
+log4j.logger.org.apache.spark.ml.tuning.TrainValidationSplit=INFO,file
+log4j.logger.org.apache.spark.ml.tuning.CrossValidator=INFO,file
+
 log4j.appender.debug=org.apache.log4j.ConsoleAppender
 log4j.appender.debug.ImmediateFlush=true
 log4j.appender.debug.Target=System.out
