--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,29 @@
             <version>3.2.1</version>
         </dependency>
 
+        <!-- 引入poi -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-scratchpad</artifactId>
+            <version>3.17</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+        </dependency>
+
         <!--<dependency>-->
             <!--<groupId>com.google.protobuf</groupId>-->
             <!--<artifactId>protobuf-java</artifactId>-->
